--- a/micro-blogging/src/App.css
+++ b/micro-blogging/src/App.css
@@ -6,6 +6,7 @@
 */
 
 
+
 * {
   box-sizing: border-box;
 }
@@ -17,23 +18,30 @@ html, body, .main {
   font-style: normal;
 }
 
+.feed {
+  display: flex;
+  flex-direction: column;
+}
+
 .navBar {
   display: flex;
+  align-items: center;
   position: sticky;
   overflow: hidden;
   margin: auto;
   top: 0;
   width: 80%;
-  height: 7vh;
+  height: 10vh;
   background-color: #343A40;
-  color: white;
-  font-size: 1.5vw;
+  border-radius: 6px;
+  font-size: 1.2vw;
 }
 
-.feed {
-  display: flex;
-  flex-direction: column;
+.navItem {
+  margin: 3%;
+  cursor: pointer;
 }
+
 
 .createTweetForm {
   display: flex;
@@ -72,7 +80,7 @@ html, body, .main {
   align-items: center;
 }
 
-#sendTweetBtn, .formMessage, #createTweetInput, .tweetContent {
+.submitBtn, .formMessage, #createTweetInput, .tweetContent {
   font-size: 1.2vw;
 }
 .tweetContainer, #createTweetInput {
@@ -101,9 +109,54 @@ html, body, .main {
 
 .tweetContent {
   color: whitesmoke;
+  overflow: hidden;
 }
 
 .loader {
   width: 4vw;
   height: 4vw;
+}
+
+.profileContainer {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 4%;
+  width: 50%;
+}
+
+.profileHeader {
+  font-size: 3.2vw;
+  color: white;
+}
+
+.inputTitle {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5vw;
+  margin-top: 3%;
+}
+
+#profileInput {
+  background-color: transparent;
+  border: 2px solid #CCC;
+  border-radius: 6px;
+  padding: 2.5% 2%;
+  color: white;
+}
+#profileInput:focus {
+  outline: none;
+}
+#profileInput, #profileInput::placeholder, .profileBtn {
+  font-size: 1.3vw;
+}
+
+.profileBtnWrap {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.profileBtn {
+  width: fit-content;
+  text-align: right;
+  padding: 1% 2%;
+  margin: 2% 1%;
 }
