--- a/micro-blogging/src/App.css
+++ b/micro-blogging/src/App.css
@@ -18,10 +18,17 @@ html, body, .main {
   font-style: normal;
 }
 
+/* .main  */
+  
+
+
 .feed {
   display: flex;
   flex-direction: column;
 }
+/* .feed, .tweetListContainer { 
+  height: 100%;
+} */
 
 .navBar {
   display: flex;
@@ -42,7 +49,25 @@ html, body, .main {
   cursor: pointer;
   text-decoration: none;
 }
+.navItem:nth-child(2) {
+  flex-grow: 1;
+}
+.navItem:hover {
+  color: white;
+}
 
+.loggedUser {
+  color:#d3dce5;
+  text-decoration: underline;
+  cursor: default;
+}
+
+.activeLink {
+  color: white;
+}
+.noneActiveLink {
+  color: rgba(255, 255, 255, 0.5);
+}
 
 .createTweetForm {
   display: flex;
@@ -54,20 +79,21 @@ html, body, .main {
   padding: 1%;
 }
 
-#createTweetInput {
+.createTweetInput {
   resize: none;
   border: none;
-  background-color: #243447;
+  background: transparent;
+  /* background-color: #243447; */
   color: #cccccc;
 }
-#createTweetInput::placeholder {
+.createTweetInput::placeholder {
   color: #cccccc;
 }
-#createTweetInput:focus {
+.createTweetInput:focus {
   outline: none;
 }
 
-.formMessage {
+.formMessage, .loginError {
   color: #721c24;
   background-color: #f8d7da;
   border-radius: 4px;
@@ -81,11 +107,11 @@ html, body, .main {
   align-items: center;
 }
 
-.submitBtn, .formMessage, #createTweetInput, .tweetContent {
+.submitBtn, .formMessage, .createTweetInput, .tweetContent {
   font-size: 1.2vw;
 }
-.tweetContainer, #createTweetInput {
-  min-height: 18vh;
+.tweetContainer, .createTweetInput {
+  min-height: 14vh;
   height: fit-content;
 }
 
@@ -99,6 +125,7 @@ html, body, .main {
   background-color: #343A40;
   border-radius: 6px;
   padding: 1%;
+  cursor: default;
 }
 
 .tweetHead {
@@ -111,6 +138,19 @@ html, body, .main {
 .tweetContent {
   color: whitesmoke;
   overflow: hidden;
+  margin-left: 2%;
+}
+
+.tweetBody {
+  display: flex;
+}
+
+.tweetAvatar {
+  object-fit: fill;
+  width: 5vw;
+  aspect-ratio: 1 / 1;
+  border-radius: 10px;
+  border: 1px solid #8ba6c2;
 }
 
 .loader {
@@ -118,13 +158,22 @@ html, body, .main {
   height: 4vw;
 }
 
-.profileContainer {
+.profileContainer, .loginContainer {
   display: flex;
   flex-direction: column;
   margin: auto;
   margin-top: 4%;
+  width: 80%;
+}
+.loginContainer {
+  margin-top: 0.5%;
   width: 50%;
 }
+
+.profileBody {
+  display: flex;
+  justify-content: space-between;
+ }
 
 .profileHeader {
   font-size: 3.2vw;
@@ -136,28 +185,154 @@ html, body, .main {
   font-size: 1.5vw;
   margin-top: 3%;
 }
+.emailLogin > .inputTitle {
+  font-size: 1.4vw;
+}
 
-#profileInput {
+#profileInput, .loginInput {
   background-color: transparent;
   border: 2px solid #CCC;
   border-radius: 6px;
   padding: 2.5% 2%;
   color: white;
 }
-#profileInput:focus {
+.loginInput {
+  width: 100%;
+  margin: 2% 0.5%;
+  padding: 2% 1.5%;
+}
+
+.loginHeader {
+  margin-top: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.loginTitle {
+  color:rgb(91, 140, 208);
+  font-weight: 600;
+  font-size: 2vw;
+}
+
+.loginError {
+  margin-right: 20%;
+  font-size: 1.5vw;
+}
+
+#profileInput:focus, .loginInput:focus {
   outline: none;
 }
-#profileInput, #profileInput::placeholder, .profileBtn {
+#profileInput, #profileInput::placeholder, .profileBtn  {
   font-size: 1.3vw;
 }
 
-.profileBtnWrap {
+.loginInput, .loginInput::placeholder {
+  font-size: 1.2vw;
+}
+
+.loginContainer > .profileBtnWrap {
   display: flex;
   flex-direction: row-reverse;
+  margin-right: 20%;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .profileBtn {
   width: fit-content;
-  text-align: right;
   padding: 1% 2%;
   margin: 2% 1%;
 }
+
+.loginMode {
+  color: rgb(0, 106, 255);
+  text-shadow: 0 0 2px #2166ac;
+  cursor: pointer;
+  font-size: 1.7vw;
+}
+ .googleLogin {
+  text-align: center;
+  margin: 3% 10% 0 0;
+ }
+ .googleLoginBtn {
+  border-radius: 5px;
+  padding: 1%;
+ }
+ .googleIcon {
+  height: 4vw;
+ }
+
+.profileNameDiv {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+}
+
+.profilePicDiv {
+  display: flex;
+  flex-direction: column;
+}
+ .profilePic {
+  object-fit: fill;
+  width: 18vw;
+  aspect-ratio: 1 / 1;
+  border-radius: 15px;
+  border: 4px outset #343A40;
+ }
+
+ .uploadImgBtn {
+  margin: 5% 0;
+  padding: 3%;
+ }
+
+ #imgInput {
+  display: none;
+ }
+
+.displayFilter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  margin: 1% auto;
+  padding: 0.5%;
+  border: 2px solid #cccccc;
+  border-radius: 6px;
+  background-color: #2166ac;
+  color: white;
+  font-size: 1.2vw;
+}
+
+.filterModeText {
+  font-weight: 600;
+  font-size: 1.3vw;
+}
+
+.userTweetsMode {
+  background-image: linear-gradient(#16345a,  #5389cb);
+}
+
+.searchBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: whitesmoke;
+  padding: 0.25%;
+  border-radius: 4px;
+}
+
+#searchBar {
+  margin-right: 1%;
+  background: transparent;
+  resize: none;
+  border: none;
+}
+#searchBar:focus {
+  outline: none;
+}
+
+.searchIcon {
+  cursor: pointer;
+}
+
